# RSSPRIME

./: .replit  DOCUMENTACAO.md  Procfile  README.md  abola_scraper.py  articles.db  cbssports_scraper.py  foxsports_scraper.py  gazzetta_scraper.py  kicker_scraper.py  lequipe_scraper.py  main.py  ole_scraper.py  pyproject.toml  replit.md  requirements.txt  theguardian_scraper.py
app/: __init__.py  abola_scraper.py  as_scraper.py  base_scraper.py  cbssports_scraper.py  dashboard_service.py  feed_processor.py  feeds.py  folha_scraper.py  foxsports_scraper.py  g1_scraper.py  gazeta_scraper.py  gazzetta_scraper.py  globo_scraper.py  kicker_scraper.py  lance_scraper.py  lequipe_scraper.py  main.py  marca_scraper.py  ole_scraper.py  order_feed_desc.py  scheduler.py  scheduler_locks.py  scraper.py  scraper_factory.py  server.py  sources_config.py  store.py  theguardian_scraper.py  uol_scraper.py  utils.py
attached_assets/: Pasted--xml-version-1-0-encoding-UTF-8-rss-xmlns-atom-http-www-w3-org-2005-Atom-xmlns-content--1757514261786_1757514261787.txt  Pasted--xml-version-1-0-encoding-UTF-8-rss-xmlns-atom-http-www-w3-org-2005-Atom-xmlns-content--1757525957564_1757525957564.txt  Pasted-Segue-um-prompt-pronto-para-voc-colar-no-Replit-em-PT-BR-pedindo-um-programa-web-em-Python-Flas-1757511430999_1757511430999.txt
data/: app.db  app.db-journal
logs/: app-2025-09-22_16-09-34.log.ndjson  app-2025-09-22_16-36-03.log.ndjson  app-2025-09-22_16-50-32.log.ndjson  app-2025-09-22_16-51-09.log.ndjson  app-2025-09-22_16-51-10.log.ndjson  app-2025-09-22_17-50-13.log.ndjson  (+97 more)
static/: style.css
(+6 files in other folders)
